# harmoniq

./: .gitignore  DEVPOST.md  README.md
backend-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  process_regulations.py  pyproject.toml  test_regulation.py
backend-fastapi/app/: __init__.py  main.py
backend-fastapi/app/agents/: __init__.py  compliance_agent.py  lava_agent.py  openrouter_agent.py  violation_fix_agent.py
backend-fastapi/app/agents/prompts/: general_assistant.txt  parse_regulation.txt
backend-fastapi/app/api/routes/: health.py  regulations.py
backend-fastapi/app/chroma/: __init__.py  client.py
backend-fastapi/app/core/: config.py
backend-fastapi/app/graph/: __init__.py  graph_builder.py
backend-fastapi/app/models/: __init__.py  regulation.py
backend-fastapi/app/schemas/: __init__.py
backend-fastapi/app/services/: __init__.py  regulation_service.py
backend-fastapi/data/eu/graphs/: EMA-2024.json  EMA-EnprEMA_informed-consent-guidance-for-paediatric-clinical-trials_2021.embeddings.npz  EMA-EnprEMA_informed-consent-guidance-for-paediatric-clinical-trials_2021.json  EMA-ich-e6-r1-guideline-good-clinical-practice-revision-1_en.embeddings.npz  EMA-ich-e6-r1-guideline-good-clinical-practice-revision-1_en.json
backend-fastapi/data/japan/chroma/: chroma.sqlite3
backend-fastapi/data/japan/graphs/: PMDA-2024.embeddings.npz  PMDA-2024.json
backend-fastapi/data/usa/chroma/: chroma.sqlite3
backend-fastapi/data/usa/graphs/: FDA-2024.backup.json  FDA-2024.embeddings.npz  FDA-2024.json  PMDA-2024.json  (+1 more)
(+24 files in other folders)
